test/scc/pp/errors/043.a
043.t:1:11: error: extra tokens at end of #ifndef directive